--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+    <section class="d-flex justify-content-between align-items-center rounded mt-4 blog">
+        <div>
+            <h3>Interactive</h3>
+            <h4>Geometry Genius</h4>
+        </div>
+        <a href="blog.html" class="btn btn-primary">Blog</a>
+    </section>
     <section class="d-flex justify-content-between my-5   ">
 
         <div class="row row-gap-4 w-75">
