--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,12 @@
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+            <div class="accordion-body"> 
+                 <p>The DOM full meaning Document object model . that is ,all of html element head,body,div,h1,p... are one object</p>
+                 <p>
+                    the pourpose of DOM ... manipulation  html elements and change ,add style and create element
+                 </p>
+            </div>
         </div>
     </div>
     <div class="accordion-item">
@@ -33,9 +37,15 @@
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-                filled with some actual content.</div>
+            <div class="accordion-body">
+                <h6>through 4 mathod select html elements </h6>
+                <p>
+                    <code>Document.getEelementById("name")</code> <br>
+                    <code>Document.getEelementsByClassName("name")</code> <br>
+                    <code>Document.querySelector(".name")</code> <br>
+                    <code>Document.querySelectorAll("#name")</code> <br>
+                </p>
+            </div>
         </div>
     </div>
     <div class="accordion-item">
@@ -47,25 +57,25 @@
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                happening here in terms of content, but just filling up the space to make it look, at least at first
-                glance, a bit more representative of how this would look in a real-world application.</div>
+            <div class="accordion-body"> 
+                the bubble means  when the main event fires , will be other or immediate event fire... 
+                this problem can be fixed by <code>stopPropagation()</code>
+
+            </div>
         </div>
     </div>
     <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
                  what is callback function ?
             </button>
         </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+        <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-                <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-                happening here in terms of content, but just filling up the space to make it look, at least at first
-                glance, a bit more representative of how this would look in a real-world application.</div>
+            <div class="accordion-body"> 
+                the callback function is  calling another function by taking one function as a parameter
+            </div>
         </div>
     </div>
 </div>
