--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<!-- blogn section -->
 
     <section class="d-flex justify-content-between align-items-center rounded mt-4 blog">
         <div>
@@ -21,6 +22,9 @@
         <a href="blog.html" class="btn btn-primary">Blog</a>
     </section>
 
+
+
+<!-- main section -->
 
     <section class="d-block d-lg-flex justify-content-between my-5 mx-auto">
         <div class="row row-gap-4  m-auto w-75">
@@ -134,7 +138,7 @@
                 </div>
             </div>
 
-
+<!-- ellipse area  -->
             <div id="ellipse" class="col-12 col-lg-4">
                 <div id="apply-ellipse" class="card">
                     <img class="m-auto pt-3" width="190" height="140" src="images/ellipse.png" alt="" srcset="">
@@ -156,6 +160,10 @@
             </div>
 
         </div>
+
+
+
+<!-- calculation area -->
         <div  class="calculate">
             <div class="card">
                 <div class="card-body text-center">
